objects/LLC_BI__Spread_Statement_Period__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Accumulate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>-D Accumulate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and user updated. The user that is analyzing this period.</description>
        <label>Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Spread_Statement_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Column_Title__c</fullName>
        <description>When a user creates a new NOI statement in the CRE Analysis application, they will see these picklist values in the “Collateral Column Title” field picklist. The value selected in this field is displayed in the collateral column header.</description>
        <label>Collateral Column Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>At Stabilization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Column_Number__c</fullName>
        <label>-D Column Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fiscal_Year_TTM_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The full fiscal year period to be used in a trailing twelve month calculation.</description>
        <label>Fiscal Year TTM Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Fiscal Year Spread Statement Periods</relationshipLabel>
        <relationshipName>Fiscal_Year_Spread_Statement_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interim_TTM_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first interim period to be used in a trailing twelve month calculation.</description>
        <label>Initial Interim TTM Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Initial Interim Spread Statement Periods</relationshipLabel>
        <relationshipName>Initial_Interim_Spread_Statement_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated automatically, but can be altered by user selection within the spreading application. This field indicates whether a spread statement period is a fiscal year. When true, the spread statement period is a fiscal year. When false, the spread statement period is not a fiscal year. By default, this is enabled when the number of months is 12 and the statement date month matches the month set in &quot;Fiscal_Year_End&quot; field onthe Account object.</description>
        <label>Is Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Global_Analysis_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. Manually update to change. This specifies which periods are available for selection in Global Analysis.</description>
        <inlineHelpText>This specifies which periods are available for selection in Global Analysis</inlineHelpText>
        <label>Is Global Analysis Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Month__c</fullName>
        <description>This field is required. It is populated automatically. It is the month of the statement date selected.</description>
        <label>Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name_Override__c</fullName>
        <description>Users populate this optional text field to capture information related to the current Spreads Period, NOI Period, or Rent Roll. By default, the system includes the field in the Rent Roll Details, Add Rent Roll, and Edit Rent Roll modals.</description>
        <inlineHelpText>The name override of the column. If this value is set the application will display it instead of the month &amp; year.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Periods__c</fullName>
        <description>This field is required and user updated. Number of periods included in this period column.</description>
        <label>Number of Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Key__c</fullName>
        <description>This field is optional and automatically updated. The Period_Key is used to identify matching periods between statements and when calculating period over period change for linked records.</description>
        <formula>TEXT(LLC_BI__Year__c)  &amp; &apos;_&apos; &amp; LPAD(TEXT(LLC_BI__Month__c),2,&apos;0&apos;) &amp; &apos;_&apos; &amp; LPAD(TEXT(LLC_BI__Number_of_Periods__c),2,&apos;0&apos;) &amp; &apos;m_&apos; &amp; SUBSTITUTE(SUBSTITUTE(UPPER(TEXT(LLC_BI__Source__c)), &apos; &apos;, &apos;&apos;), &apos;.&apos;, &apos;&apos;)</formula>
        <label>Period Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Out_Of_Range__c</fullName>
        <description>This field is currently not being used.</description>
        <formula>IF(
  OR(
    OR(
      LLC_BI__Year__c &gt; Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),
      AND(
     LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),
     LLC_BI__Month__c &gt; Month(LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c)
      )
    ),
    OR(
      LLC_BI__Year__c &lt; Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c),
      AND(
     LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c),
     LLC_BI__Month__c &lt; Month(LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c)
      )
    )
  ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Out Of Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Project_from_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this required picklist field with the period, and source to start projecting from. By default, the most recent 12 month fiscal year period displays.</description>
        <label>Project from Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Spread Statement Period (Project from Period)</relationshipLabel>
        <relationshipName>Spread_Statement_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected_In_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required. It is driven by user selection within the global analysis app. This field indicates whether the spread statement period is displayed in global anaysis. When true, the spread statement period is displayed in global analysis. When false, the spread statement period is not displayed. By default, it is enabled if the period has &quot;Is_Fiscal_Year__c&quot; checked and no other other periods for the same year exist that also have &quot;LLC_BI__Is_Fiscal_Year__c&quot; checked. If another period does exist, the period with the highest priority source will be enabled. Otherwise, this field is disabled. Priority source is as follows: CPA Audit, CPA Compiled, CPA Reviewed, Tax Return, Comp. Prep, Projected, and Other</description>
        <label>Selected In Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required. It is driven by user selection within the spreading application. This field indicates whether the spread statement period is displayed in spreads. When true, the spread statement period is dispalyed in spreads, when false the spread statement period is hidden. By default, it is true.</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source__c</fullName>
        <description>This field is required. It is driven by user selection within the spreading application. It indicates the document that provides the financial information.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Return</fullName>
                </value>
                <value>
                    <fullName>CPA Audit</fullName>
                </value>
                <value>
                    <fullName>CPA Review</fullName>
                </value>
                <value>
                    <fullName>CPA Compiled</fullName>
                </value>
                <value>
                    <fullName>Comp. Prep</fullName>
                </value>
                <value>
                    <fullName>Company Projected</fullName>
                </value>
                <value>
                    <fullName>PFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>1 Base Projection</fullName>
                </value>
                <value>
                    <fullName>2 Adverse Projection</fullName>
                </value>
                <value>
                    <fullName>3 Severely Adverse Projection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Projections_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This required lookup field looks up to the Spread Projections Template object.</description>
        <label>Spread Projections Template</label>
        <referenceTo>LLC_BI__Spread_Projections_Template__c</referenceTo>
        <relationshipLabel>Spread Statement Periods</relationshipLabel>
        <relationshipName>Spread_Statement_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Type__c</fullName>
        <description>This field is required. It is populated automatically whenever a spread statement period is created within the spreading application. This field specifies the Spread Statement Template associated with the Spread Statement Period.</description>
        <label>Spread Statement Type</label>
        <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
        <relationshipLabel>Spread Statement Period</relationshipLabel>
        <relationshipName>Spread_Statement_Period</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_Date__c</fullName>
        <description>This field is required. It is driven by user selection within the spreading application. It indicates the effective date of the document.</description>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trailing_Interim_TTM_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The latest interim period to be used in a trailing twelve month calculation.</description>
        <label>Trailing Interim TTM Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Trailing_Interim_TTM_Spread Statement Periods</relationshipLabel>
        <relationshipName>Trailing_Interim_Spread_Statement_Period</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is used to determine whether or not this is a Trailing Twelve Month or Standard Period</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Trailing Twelve Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Unmapped_Values__c</fullName>
        <description>The system populates this long text field with incoming Spreads values passed to the Credit Analysis integration endpoint and serves as a temporary data storage mechanism. The system stores the Spreads values until users map all pending fields.</description>
        <label>Unmapped Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Hidden_In_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is altered by the global analysis UI, used to determine whether or not to show period associated periods of the same year in global analysis view</description>
        <label>Year Hidden In Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Out_Range__c</fullName>
        <description>This field is currently not being used</description>
        <formula>IF(OR(LLC_BI__Year__c &gt; Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c), LLC_BI__Year__c &lt; Year(LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Out Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is required. This field is populated automatically. It is the year of the statement date selected.</description>
        <label>Year</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__externalLookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>externalLookupKey</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>Field Deprecated.  Replaced by externalLookup_Key__c.</description>
        <label>-D lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Statement Period</label>
    <nameField>
        <displayFormat>SSP-{000000000}</displayFormat>
        <label>Spread Statement Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Period</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>